--- a/components/detail-status.html
+++ b/components/detail-status.html
@@ -38,6 +38,7 @@
 			<a id="zk-zhiding" href="../zhuake/operate-zhiding.html" class="btn btn-default hidden">指定</a>
 			<a id="zk-shanchu" href="../zhuake/operate-shanchu.html" class="btn btn-default hidden">删除</a>
 			<a id="zk-shensu" href="../zhuake/operate-shensu.html" class="btn btn-default hidden">申诉</a>
+			<a id="zk-chongxinliuzhuan" href="../zhuake/operate-chongxinliuzhuan.html" class="btn btn-default hidden">重新流转</a>			
 			<a id="zk-wuxiao" href="../zhuake/operate-wuxiao.html" class="btn btn-default hidden">无效</a>
 
 			<a id="yy-baobei" href="../yaoyue/operate-baobei.html" class="btn btn-default hidden">报备</a>
