--- a/css/app-common.scss
+++ b/css/app-common.scss
@@ -212,8 +212,9 @@ p{
     box-shadow: inset 0 1px 1px #fff;
     background: #fff;
     height: px2rem(34px);
-    line-height: 1.42857143;
-    padding: px2rem(6px) px2rem(12px);
+    line-height: px2rem(34px);
+    //font-size: px2rem(14px);
+    padding: 0 px2rem(12px);
 }
 
 .form-group {
