--- a/components/detail-yaoyue.html
+++ b/components/detail-yaoyue.html
@@ -37,6 +37,12 @@
             <span class="replace-data" data-name="yy-customer-relation"></span>
 					</span>
 				</div>
+        <div class="item col-xs-6">
+					<span class="name col-xs-4">类别</span>
+					<span class="msg col-xs-8">
+            <span class="replace-data" data-name="yy-customer-type"></span>
+					</span>
+				</div>
 				<div class="item col-xs-12">
 					<div class="name">拍摄想法</div>
 					<div class="msg min-height-40">
