fix: list下表格宽度用scss计算rem

--- a/css/app-common.scss
+++ b/css/app-common.scss
@@ -96,6 +96,14 @@ a:active {
     font-size: px2rem(14px);
 }
 
+.table-th-width-44{
+    width: px2rem(44px);
+}
+
+.table-th-width-65{
+    width: px2rem(65px);
+}
+
 p{
   margin: 0 0 px2rem(10px);
 }
